kubernetes/istio/base/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: policycortex-gateway
  namespace: policycortex
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "policycortex.com"
    - "*.policycortex.com"
    tls:
      httpsRedirect: true # Redirect HTTP to HTTPS
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: policycortex-tls-cert
    hosts:
    - "policycortex.com"
    - "*.policycortex.com"
  - port:
      number: 15443
      name: grpc-tls
      protocol: GRPC
    tls:
      mode: SIMPLE
      credentialName: policycortex-grpc-cert
    hosts:
    - "grpc.policycortex.com"
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: policycortex-internal-gateway
  namespace: policycortex
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http-internal
      protocol: HTTP
    hosts:
    - "*.policycortex.internal"
  - port:
      number: 8443
      name: https-internal
      protocol: HTTPS
    tls:
      mode: MUTUAL
      credentialName: policycortex-internal-tls-cert
    hosts:
    - "*.policycortex.internal"
